# financial-docs-ai

financial-docs-ai/: README.md
financial-docs-ai/backend/: pyproject.toml
financial-docs-ai/backend/alembic/: env.py
financial-docs-ai/backend/alembic/versions/: 001_initial_schema.py
financial-docs-ai/backend/app/: config.py  main.py
financial-docs-ai/backend/app/api/: chat.py  health.py
financial-docs-ai/backend/app/assistant/: agent.py  deps.py  instructions.md  outputs.py
financial-docs-ai/backend/app/auth/: dependencies.py
financial-docs-ai/backend/app/chat/: messages.py  orchestrator.py  streaming.py
financial-docs-ai/backend/app/database/: chats.py  documents.py  models.py  session.py  supabase.py
financial-docs-ai/backend/app/grounding/: validator.py
financial-docs-ai/backend/app/retrieval/: fusion.py  queries.py  retriever.py
financial-docs-ai/backend/ingest/: run.py
financial-docs-ai/backend/tests/grounding/: test_validator.py
financial-docs-ai/backend/tests/retrieval/: test_fusion.py
financial-docs-ai/data/: README.md  download.py
financial-docs-ai/frontend/: index.html  package.json
financial-docs-ai/frontend/src/: App.tsx  index.css
financial-docs-ai/frontend/src/components/chat/: ChatPanel.tsx  CitationBadge.tsx  MessageList.tsx
financial-docs-ai/frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  scroll-area.tsx
financial-docs-ai/frontend/src/lib/: api.ts  auth.ts  env.ts  http.ts
financial-docs-ai/frontend/src/pages/: HomePage.tsx  LoginPage.tsx
