[project]
name = "document-copilot-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "openai>=1.57.0",
    "supabase>=2.10.0",
    "pydantic-ai>=0.0.55",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
add-bounds = "exact"
exclude-newer = "7 days"

[tool.pytest.ini_options]
markers = [
    "integration: tests that need live Supabase or OpenAI credentials",
]

[tool.ruff]
line-length = 100
target-version = "py312"
